--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@react-three/drei": "^10.1.2",
     "@react-three/fiber": "^9.1.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "env": "^0.0.2",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "mongodb": "^6.17.0",
+    "node-cron": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
